# genbench_cbt_2023

./: .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  Makefile  README.md  example_evaluation.py  setup.cfg  setup.py
.github/PULL_REQUEST_TEMPLATE/: task_sub.yml  task_submission.md  task_submission.yml
.github/workflows/: ci.yml  task_submission_ci.yml
genbench/: __init__.py
genbench/cli/: genbench_cli.py
genbench/dummy_data/: LLM_test.jsonl
genbench/tasks/sample_task/: config.jsonnet  task.py
genbench/utils/: file.py  tasks.py
genbench_venv/: pyvenv.cfg
genbench_venv/Scripts/: activate  activate.bat  genbench-cli-script.py  get_gprof  get_objgraph  undill
notebooks/: GenBenchTaskViewer.ipynb
scripts/mscan/: create-mscan-jsonnets.py  create-mscan.sh
src/: cot_inference.py  final_inference_utils.py  standard_inference.py
src/genbench/: __init__.py  api.py  loading.py  task.py  task_config.py  task_dict.py
src/genbench/cli/: genbench_cli.py
src/genbench/dummy_data/: CLL-QA_test.json
src/genbench/utils/: file.py  logging.py  tasks.py  validation.py
templates/: cookiecutter.json
templates/task/: cookiecutter.json
templates/task/{{ cookiecutter.task_id }}/: config.jsonnet  doc.md  task.py
templates/task_with_subtasks/: cookiecutter.json
templates/task_with_subtasks/{{ cookiecutter.task_id }}/: __init__.py  config.jsonnet
templates/{{ cookiecutter.task_id }}/: config.jsonnet  task.py
templates/{{ cookiecutter.task_slug }}/: doc.md  task.py
tests/: conftest.py  test_task.py  test_task_config.py  test_task_impl.py
(+652 files in other folders)
