[metadata]
license_file = LICENSE


[isort]
;Adapted from https://github.com/huggingface/evaluate/blob/main/setup.cfg
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[flake8]
ignore = E203, W503
max-line-length = 119
per-file-ignores =
    src/genbench/__init__.py:F401